--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "dev": "pm2-dev start config/dev-config.json",
     "transpile": "babel ./server --out-dir build",
     "clean": "rimraf build",
-    "watch:dev": "nodemon"
+    "watch:dev": "nodemon",
+    "db:migrate": "knex --knexfile db/knexfile.js migrate:latest",
+    "db:seed": "knex --knexfile db/knexfile.js seed:run",
+    "pretest": "eslint --ignore-path .gitignore ."
   },
   "author": "Neha",
   "license": "ISC",
@@ -20,12 +23,14 @@
     "@babel/preset-env": "^7.9.0",
     "bookshelf": "^1.1.1",
     "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "knex": "^0.20.13",
     "moment": "^2.24.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.2",
     "npm-run-all": "^4.1.5",
+    "pg": "^8.0.0",
     "rimraf": "^3.0.2",
     "uuid": "^7.0.3"
   },
@@ -34,7 +39,13 @@
     "@babel/node": "^7.8.7",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
-    "babel-watch": "^2.0.7"
+    "babel-watch": "^2.0.7",
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1"
   },
   "nodemonConfig": {
     "exec": "npm run dev",
