--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
   "dependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/preset-env": "^7.9.0",
+    "body-parser": "^1.19.0",
     "bookshelf": "^1.1.1",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
+    "elasticsearch": "^16.7.1",
     "express": "^4.17.1",
+    "get-json": "^1.0.1",
     "knex": "^0.20.13",
     "moment": "^2.24.0",
     "morgan": "^1.10.0",
