changes in the structure

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run dev",
-    "test": "jest",
+    "test": "./node_modules/.bin/mocha --require @babel/register --exit",
     "build": "npm-run-all clean transpile",
     "server": "node ./build/bin/www",
     "dev": "pm2-dev start config/dev-config.json",
@@ -14,15 +14,18 @@
     "watch:dev": "nodemon",
     "db:migrate": "knex --knexfile db/knexfile.js migrate:latest",
     "db:seed": "knex --knexfile db/knexfile.js seed:run",
-    "pretest": "eslint --ignore-path .gitignore ."
+    "test:debug": "mocha --require @babel/register --inspect-brk --exit",
+    "lint": "eslint -c .eslintrc.json {server,test}/**",
+    "lint:fix": "eslint --fix -c .eslintrc.json {server,test}/**"
   },
   "author": "Neha",
   "license": "ISC",
   "dependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/preset-env": "^7.9.0",
+    "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "bookshelf": "^1.1.1",
+    "bookshelf-bulk-save": "^1.0.6",
+    "bookshelf-column-cache": "^1.0.3",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "elasticsearch": "^16.7.1",
@@ -31,24 +34,36 @@
     "knex": "^0.20.13",
     "moment": "^2.24.0",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.2",
     "npm-run-all": "^4.1.5",
+    "objection": "^2.1.3",
     "pg": "^8.0.0",
+    "query-string": "^6.11.1",
     "rimraf": "^3.0.2",
     "uuid": "^7.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/node": "^7.8.7",
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-watch": "^2.0.7",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.4",
+    "@babel/node": "^7.8.4",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
+    "@babel/plugin-proposal-optional-chaining": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.9.0",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/register": "^7.9.0",
+    "babel-eslint": "^10.0.3",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "eslint": "^6.8.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1"
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "mocha": "^7.0.1",
+    "nodemon": "^2.0.2",
+    "prettier": "^1.19.1",
+    "supertest": "^4.0.2"
   },
   "nodemonConfig": {
     "exec": "npm run dev",
