--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.17.1",
     "get-json": "^1.0.1",
     "knex": "^0.20.13",
+    "module-alias": "^2.2.2",
     "moment": "^2.24.0",
     "morgan": "^1.10.0",
     "npm-run-all": "^4.1.5",
@@ -77,7 +78,9 @@
       "*.spec.js"
     ]
   },
-  "jest": {
-    "testEnvironment": "node"
+  "_moduleAliases": {
+    "@app": "./server",
+    "@db": "./db",
+    "@root": "."
   }
 }
