--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^8.2.0",
     "elasticsearch": "^16.7.1",
     "express": "^4.17.1",
+    "express-validator": "^6.4.0",
     "get-json": "^1.0.1",
     "knex": "^0.20.13",
     "module-alias": "^2.2.2",
